nivasa-macros/tests/trybuild/validation_groups_numeric.stderr
error: expected `#[groups("create", "update")]`
 --> tests/trybuild/validation_groups_numeric.rs:5:5
  |
5 |     #[groups(123)]
  |     ^
